// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PayHistory check snapshot should match snapshot with props 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "marginVertical": 18,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
      }
    }
  >
    <Memo()
      height={18}
      ready={true}
      width={73}
    >
      <Memo()
        date={2021-01-31T00:00:00.000Z}
        level="h5"
      />
    </Memo()>
    <Memo()
      height={8}
    />
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "width": "95%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Memo()
          color="#8EADAD"
          level="h5"
        >
          Take Home
        </Memo()>
        <Memo()
          height={22}
          ready={true}
          width={80}
        >
          <Memo()
            size={16}
          >
            <Memo()
              value={2200.01}
            />
          </Memo()>
        </Memo()>
      </View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Memo()
          color="#8EADAD"
          level="h5"
        >
          Hours
        </Memo()>
        <Memo()
          height={22}
          ready={true}
          width={80}
        >
          <Memo()
            size={16}
          >
            180.00
          </Memo()>
        </Memo()>
      </View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Memo()
          color="#8EADAD"
          level="h5"
        >
          Gross
        </Memo()>
        <Memo()
          height={22}
          ready={true}
          width={80}
        >
          <Memo()
            size={16}
          >
            <Memo()
              value={2400}
            />
          </Memo()>
        </Memo()>
      </View>
    </View>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../src/images/chevron_right_corban.png",
      }
    }
    style={
      Object {
        "height": 24,
        "resizeMode": "contain",
        "width": 24,
      }
    }
  />
</View>
`;

exports[`PayHistory check snapshot should match snapshot without props and loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "marginVertical": 18,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 1,
      }
    }
  >
    <Memo()
      height={18}
      ready={false}
      width={73}
    >
      <Memo()
        date={Date { NaN }}
        level="h5"
      />
    </Memo()>
    <Memo()
      height={8}
    />
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "width": "95%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Memo()
          color="#8EADAD"
          level="h5"
        >
          Take Home
        </Memo()>
        <Memo()
          height={22}
          ready={false}
          width={80}
        >
          <Memo()
            size={16}
          >
            <Memo() />
          </Memo()>
        </Memo()>
      </View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Memo()
          color="#8EADAD"
          level="h5"
        >
          Hours
        </Memo()>
        <Memo()
          height={22}
          ready={false}
          width={80}
        >
          <Memo()
            size={16}
          />
        </Memo()>
      </View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Memo()
          color="#8EADAD"
          level="h5"
        >
          Gross
        </Memo()>
        <Memo()
          height={22}
          ready={false}
          width={80}
        >
          <Memo()
            size={16}
          >
            <Memo() />
          </Memo()>
        </Memo()>
      </View>
    </View>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../src/images/chevron_right_corban.png",
      }
    }
    style={
      Object {
        "height": 24,
        "resizeMode": "contain",
        "width": 24,
      }
    }
  />
</View>
`;
